# zap-rust-oracle-template

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile2  LICENSE  README.md  config.json  devnet_config.json  events.json  kovan_config.json  mainnet_config.json  start_devnet.sh
.github/workflows/: RustOracleDockerCi.yml
eventsABI/: Bound.abi  CanceledRequest.abi  Escrowed.abi  FulfillQuery.abi  Incoming.abi  NewProvider.abi  OffchainResponse.abi  OffchainResponseInt.abi  OffchainResult1.abi  OffchainResult2.abi  OffchainResult3.abi  OffchainResult4.abi  Released.abi  Returned.abi  Unbound.abi  dispatch.abi
src/: config_loader.rs  event_decoder.rs  main.rs
testserver/: .env  ethersTest.js  index.js  package-lock.json  package.json  queryCallback.js  testProvider  utils.js  websocket.js
testserver/contracts/lib/lifecycle/Destructible.sol/: Destructible.json
testserver/contracts/lib/ownership/Ownable.sol/: Ownable.json
testserver/contracts/lib/ownership/ZapCoordinator.sol/: ZapCoordinator.json
testserver/contracts/lib/platform/Client.sol/: Client2.dbg.json
testserver/contracts/lib/platform/OffChainClient.sol/: OffChainClient.dbg.json  OffChainClient.json
testserver/contracts/lib/platform/PiecewiseLogic.sol/: PiecewiseLogic.json
testserver/contracts/lib/platform/TestContracts.sol/: TestClient.json  TestProvider.dbg.json  TestProvider.json
testserver/contracts/token/Faucet.sol/: Faucet.json
testserver/contracts/token/ZapToken.sol/: BasicToken.json  MintableToken.dbg.json  MintableToken.json  Ownable.json  SafeMath.json  StandardToken.json  ZapToken.json
(+13 files in other folders)
