[package]
name = "zap-rust-oracle-template"
version = "0.1.0"
authors = ["John <johnm@plasmatech.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
reqwest = { version = "0.10.2", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
eth_checksum = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
secp256k1 = { version = "0.17", features = ["recovery"] }
rustc-hex = "2.1.0"
hex = "0.4.2"
dotenv = "0.15.0"
dotenv_codegen  = "0.15.0"
ethabi = "12.0.0"
bigdecimal = "0.1.2"
tiny-keccak = "1.4"
substring = "1.4.0"
run_script = "^0.6.3"
io-arc = "1.0.0"
async-std = "1.8.0"